# tclint

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  LICENSE  README.md  conftest.py  dev-constraints.txt  openroad-help.txt  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  claude.yml  release.yml
docs/: configuration.md  lsp.md  plugins.md  tclfmt.md  violations.md
src/tclint/: __main__.py  checks.py  comments.py  config.py  format.py  lexer.py  main.py  parser.py  symbol_table.py  syntax_tree.py  tclint.py  utils.py  violations.py
src/tclint/cli/: resolver.py  tclfmt.py  tclint.py  tclint_plugins.py  tclsp.py  utils.py
src/tclint/commands/: __init__.py  builtin.py  checks.py  openroad.py  parse_help.py  plugins.py  schema.py  utils.py
src/tclint/plugins/: expect.py
src/tclint/plugins/openroad/: help_parser.py  openroad.py
tests/: test_cli_utils.py  test_config.py  test_format.py  test_lint.py  test_parser.py  test_symbol_table.py  test_tclfmt.py  test_tclint.py  test_tclsp.py
tests/cli/: test_resolver.py  test_utils.py
tests/commands/: test_builtins.py  test_check_arg_spec.py  test_checks.py  test_plugin.py  test_schema.py
tests/commands/data/: dynamic.py  dynamic_invalid.py  invalid.json  migrate_openroad.py  openroad.json
tests/data/: backslash-spacing.tcl  backslash-spacing.txt  blank-lines.tcl  blank-lines.txt  clean.tcl  dirty.formatted.tcl  dirty.tcl  dirty.txt  example.tcl  example.txt  expr-format.tcl  expr-format.txt  expr-spacing.tcl  expr-spacing.txt  indent.tcl  indent.txt  indent_lists.tcl  indent_lists.txt  lines.tcl  lines.txt  no-check-style.tcl  pyproject.toml  spaces-in-braces.tcl  spaces-in-braces.toml  spaces-in-braces.txt  special-comments.tcl  symbols.tcl  tclint.toml  unopened-quote.tcl  unopened-quote.txt
tests/openroad/: test_check_arg_spec.py  test_help_parser.py
tests/plugins/: test_expect.py
util/: pre-commit
