[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "tclint"
dynamic = ["version"]
description = "A CLI utility for linting and analyzing Tcl code."
license = {text = "MIT License"}
authors = [
    {name = "Noah Moroze", email = "me@noahmoroze.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ply==3.11",
    "tomli~=2.0.1; python_version < '3.11'",
    "pathspec==0.11.2",
    "importlib-metadata==6.8.0",
    "pygls==1.3.1",
    "voluptuous==0.15.2",
]

[dependency-groups]
dev = [
  {include-group = "format"},
  {include-group = "lint"},
  {include-group = "test"}
]
format = [
    "black==23.11.0",
]
lint = [
    "flake8==6.1.0",
    "mypy==1.9.0",
    "codespell==2.3.0",
]
test = [
    "pytest==8.2.0",
    "pytest-timeout==2.2.0",
    "pytest-lsp==0.4.3",
    # TODO: remove this entry if we standardize on uv (in favor of
    # `tool.uv.constraint-dependencies`).
    "pytest-asyncio==0.24",
]

[project.scripts]
tclint = "tclint.cli.tclint:main"
tclfmt = "tclint.cli.tclfmt:main"
tclsp = "tclint.cli.tclsp:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 10

# Silences a warning from pytest-lsp
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools_scm]
version_file = "src/tclint/_version.py"

[[tool.mypy.overrides]]
module = [
    "ply.*",
]
ignore_missing_imports = true

[tool.black]
preview = true

[tool.uv]
constraint-dependencies = [
    # Included by pytest-lsp, this version is required to support
    # `asyncio_default_fixture_loop_scope`.
    "pytest-asyncio>=0.24"
]
